[package]
name = "rhelma-observability-agent"
version = "0.3.1"
edition = "2021"
description = "Rhelma Observability Agent - production-grade heartbeat & anomaly detection"
license = "MIT OR Apache-2.0"

[dependencies]
rhelma-config = { path = "../../crates/rhelma-config" }
rhelma-tracing  = { path = "../../crates/rhelma-tracing" }
rhelma-http-observability = { path = "../../crates/rhelma-http-observability", features = ["reqwest"] }
rhelma-event  = { path = "../../crates/rhelma-event" }
rhelma-event-kafka  = { path = "../../crates/rhelma-event-kafka" }
rhelma-event-kafka-agent  = { path = "../../crates/rhelma-event-kafka-agent" }
rhelma-observability-core = { path = "../core" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "v7"] }
metrics = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
tokio-stream = "0.1"
async-nats = "0.33"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }