[package]
name = "rhelma-observability-core"
version = "2.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core observability wiring for the Rhelma platform (logger, tracing, metrics)"
publish = false

[dependencies]
# Core platform crates
rhelma-core = { path = "../../crates/rhelma-core" }
rhelma-logger = { path = "../../crates/rhelma-logger" }
rhelma-metrics = { path = "../../crates/rhelma-metrics" }
rhelma-tracing = { path = "../../crates/rhelma-tracing" }
rhelma-config = { path = "../../crates/rhelma-config" }

tracing = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Error and utilities
thiserror = { workspace = true }
anyhow = { workspace = true }

# Common types
chrono = { workspace = true, features = ["serde", "clock"] }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
